--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,19 @@ body {
 }
 
 .botonera {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -57%);
     margin: 10px;
+    justify-content: center
 }
 
 .boton {
-    min-width: 130px;
+    min-width: 400px;
     height: 150px;
     color: #fff;
+    margin: 10px;
     padding: 5px 10px;
     font-weight: bold;
     cursor: pointer;
