--- a/Historia/main.css
+++ b/Historia/main.css
@@ -44,9 +44,10 @@ body {
 }
 
 .jovani{
+    opacity: 0.25;
     position: absolute;
-    top: 90%;
-    right: 50%;
+    top: 85%;
+    right: 42.5%;
     transform: translateY(-50%);
 }
 
